[gd_scene load_steps=5 format=3 uid="uid://djkikcoxl8b4x"]

[ext_resource type="Script" path="res://escenas/game_over_scene/game_over_scene.gd" id="1_0pgci"]
[ext_resource type="Theme" uid="uid://dwocoy3cdqw1r" path="res://escenas/theme.tres" id="3_5yvkn"]
[ext_resource type="FontFile" uid="uid://bvxgms0k75jgt" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="4_cn3pg"]
[ext_resource type="AudioStream" uid="uid://dwlc7qgwpbbu7" path="res://assets/sound/sfx/coin.wav" id="4_jkdtn"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0pgci")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 544.0
offset_bottom = 321.0
color = Color(0, 0, 0, 0.843137)

[node name="Label_youdied" type="Label" parent="CanvasLayer"]
offset_left = 156.0
offset_top = 48.0
offset_right = 388.0
offset_bottom = 80.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_cn3pg")
theme_override_font_sizes/font_size = 32

[node name="Exit" type="Button" parent="CanvasLayer"]
offset_left = 378.0
offset_top = 110.0
offset_right = 484.0
offset_bottom = 141.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Store")
focus_neighbor_right = NodePath("../Restart")
theme = ExtResource("3_5yvkn")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
text = "EXIT"

[node name="Restart" type="Button" parent="CanvasLayer"]
offset_left = 72.0
offset_top = 110.0
offset_right = 178.0
offset_bottom = 141.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Exit")
focus_neighbor_right = NodePath("../Store")
theme = ExtResource("3_5yvkn")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "RESTART"

[node name="Store" type="Button" parent="CanvasLayer"]
offset_left = 223.0
offset_top = 110.0
offset_right = 329.0
offset_bottom = 141.0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../Restart")
focus_neighbor_right = NodePath("../Exit")
theme = ExtResource("3_5yvkn")
theme_override_colors/font_focus_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
text = "STORE"

[node name="Label_time" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 179.0
offset_right = 161.0
offset_bottom = 202.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="Label_time_value" type="Label" parent="CanvasLayer"]
offset_left = 144.0
offset_top = 179.0
offset_right = 284.0
offset_bottom = 202.0
theme = ExtResource("3_5yvkn")
theme_override_font_sizes/font_size = 16

[node name="Label_distance" type="Label" parent="CanvasLayer"]
offset_left = 282.0
offset_top = 179.0
offset_right = 472.0
offset_bottom = 202.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="Label_distance_value" type="Label" parent="CanvasLayer"]
offset_left = 407.0
offset_top = 179.0
offset_right = 597.0
offset_bottom = 202.0
theme = ExtResource("3_5yvkn")
theme_override_font_sizes/font_size = 16

[node name="Label_enemies" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 211.0
offset_right = 245.0
offset_bottom = 234.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="Label_enemies_value" type="Label" parent="CanvasLayer"]
offset_left = 219.0
offset_top = 211.0
offset_right = 443.0
offset_bottom = 234.0
theme = ExtResource("3_5yvkn")
theme_override_font_sizes/font_size = 16

[node name="Label_cards" type="Label" parent="CanvasLayer"]
offset_left = 282.0
offset_top = 211.0
offset_right = 394.0
offset_bottom = 234.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="Label_cards_value" type="Label" parent="CanvasLayer"]
offset_left = 506.0
offset_top = 211.0
offset_right = 618.0
offset_bottom = 234.0
theme = ExtResource("3_5yvkn")
theme_override_font_sizes/font_size = 16

[node name="Label_coins" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 245.0
offset_right = 133.0
offset_bottom = 268.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="Label_coins_value" type="Label" parent="CanvasLayer"]
offset_left = 229.0
offset_top = 245.0
offset_right = 341.0
offset_bottom = 268.0
theme = ExtResource("3_5yvkn")
theme_override_font_sizes/font_size = 16

[node name="Label_hearts" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 277.0
offset_right = 211.0
offset_bottom = 300.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="Label_hearts_value" type="Label" parent="CanvasLayer"]
offset_left = 173.0
offset_top = 277.0
offset_right = 363.0
offset_bottom = 300.0
theme = ExtResource("3_5yvkn")
theme_override_font_sizes/font_size = 16

[node name="Label_gemes" type="Label" parent="CanvasLayer"]
offset_left = 282.0
offset_top = 245.0
offset_right = 472.0
offset_bottom = 268.0
theme = ExtResource("3_5yvkn")
theme_override_colors/font_shadow_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 16

[node name="Label_gemes_value" type="Label" parent="CanvasLayer"]
offset_left = 484.0
offset_top = 246.0
offset_right = 674.0
offset_bottom = 269.0
theme = ExtResource("3_5yvkn")
theme_override_font_sizes/font_size = 16

[node name="Typing_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jkdtn")
volume_db = -20.0
pitch_scale = 1.6

[connection signal="focus_exited" from="CanvasLayer/Exit" to="." method="_on_exit_focus_exited"]
[connection signal="pressed" from="CanvasLayer/Exit" to="." method="_on_exit_pressed"]
[connection signal="focus_exited" from="CanvasLayer/Restart" to="." method="_on_restart_focus_exited"]
[connection signal="pressed" from="CanvasLayer/Restart" to="." method="_on_restart_pressed"]
[connection signal="focus_exited" from="CanvasLayer/Store" to="." method="_on_restart_focus_exited"]
[connection signal="pressed" from="CanvasLayer/Store" to="." method="_on_store_pressed"]
[connection signal="timeout" from="Typing_timer" to="." method="_on_typing_timer_timeout"]
